Lots of changes to retro handling